# butane

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
cmake/: ProjectFuncs.cmake
data/materials/: container.material  default.material  light.material
data/models/backpack/: backpack.material
data/shaders/: default.frag  default.program  default.vert  demo.frag  demo.vert  light.frag  light.program
data/shaders/src/: default.frag  default.vert  light.frag
data/textures/: matrix.jpg.toml  test.png.toml
src/core/: Assert.cpp  Assert.hpp  CMakeLists.txt  InputSystem.cpp  InputSystem.hpp  Logger.cpp  Logger.hpp  StaticVector.hpp  StdoutSink.cpp  StdoutSink.hpp  System.cpp  System.hpp  TimeSystem.cpp  TimeSystem.hpp  Types.hpp  Util.hpp
src/core/assets/: AssetBase.cpp  AssetBase.hpp  AssetSystem.cpp  AssetSystem.hpp
src/core/debug/: Assert.cpp  Assert.hpp  ImGuiExtensions.cpp  ImGuiExtensions.hpp
src/core/experiments/: Oscillator.cpp  Oscillator.hpp  SSTV.cpp  SSTV.hpp
src/core/filesystem/: Filesystem.cpp  Filesystem.hpp  TomlLoader.cpp  TomlLoader.hpp  Watch.linux.cpp  Watch.null.cpp  WatchSystem.cpp  WatchSystem.hpp
src/core/gl/: GLHeaders.hpp  Material.cpp  Material.hpp  MaterialSystem.cpp  MaterialSystem.hpp  Shader.cpp  Shader.hpp  ShaderSystem.cpp  ShaderSystem.hpp  Texture.cpp  Texture.hpp  TextureSystem.cpp  TextureSystem.hpp
src/core/rendering/: GLHeaders.hpp  Material.cpp  Material.hpp  MaterialSystem.cpp  MaterialSystem.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Shader.cpp  Shader.hpp  ShaderSystem.cpp  ShaderSystem.hpp  Texture.cpp  Texture.hpp  TextureSystem.cpp  TextureSystem.hpp
src/core/scene/: Camera.cpp  Camera.hpp  Light.cpp  Light.hpp  SGNode.hpp  Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp  Transform.cpp  Transform.hpp
src/core/sdl/: File.cpp  File.hpp  PerfTimer.hpp  Window.cpp  Window.hpp
src/main/: CMakeLists.txt  main.cpp
src/main/wrap/: ImGui.cpp  SDL.cpp  Systems.cpp  Wrap.hpp  fasstv.cpp  physfs.cpp
